Fixes for drag and drop jumping, still a bit janky

--- a/style/common/Screen.styl
+++ b/style/common/Screen.styl
@@ -23,8 +23,8 @@
     border-radius: 20px
 
   .drag-placeholder
-    border: 2px dotted rgba(0, 0, 0, 0.2)
-    background: $steel-lowlight-color
+    border: 1px dashed rgba(0, 0, 0, 0.2)
+    background: $steel-highlight-color
 
 @keyframes screen-enter
   from
